<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#5B0DF8"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:onClick="VideoConference"
        android:text="@string/patient_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextToken" />

    <EditText
        android:id="@+id/editTextToken"
        android:layout_width="328dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/token"
        android:inputType="textPersonName"
        android:textColorHighlight="#0C0C0C"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpatientName"
        android:autofillHints="00" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="287dp"
        android:layout_height="86dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="76dp"
        android:gravity="center"
        android:text="@string/enter_mobile_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextpatientName"
        android:layout_width="328dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/mobile_no_or_patient_id"
        android:inputType="textPersonName"
        android:textColorHint="#0E0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="+91" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/patient_login"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="276dp"
        android:layout_height="197dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/nurselogo"
        android:contentDescription="@string/nurse_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>