<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getOtp_button"
            android:layout_width="328dp"
            android:layout_height="68dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#1E88E5"
            android:text="Get OTP"
            android:textColor="#F3F8F3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="19dp"
            android:visibility="invisible" />

    </FrameLayout>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="311dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:textColorHint="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:autofillHints="+91" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="375dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/patient_registration_generate_token_verify_mobile"
        android:textColor="#101010"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="408dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:outlineProvider="none"
        android:singleLine="false"
        android:text="@string/e_swasthyasuraksha_opd"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="345dp"
        android:layout_height="260dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/doctorlogo"
        android:contentDescription="@string/doctor_img" />

</androidx.constraintlayout.widget.ConstraintLayout>