<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhatAreU">



    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="423dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/front" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:backgroundTint="#5B0DF8"
            android:fontFamily="sans-serif"
            android:onClick="Registration"
            android:padding="5dp"
            android:text="@string/patient_registration_generate_token"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="2dp"
            android:backgroundTint="#5B0DF8"
            android:fontFamily="sans-serif"
            android:onClick="Login"
            android:padding="5dp"
            android:text="@string/patient_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:backgroundTint="#5B0DF8"
            android:fontFamily="sans-serif"
            android:onClick="Profile"
            android:padding="5dp"
            android:text="@string/patient_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>